--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
+[workspace]
+members = [
+    ".",
+    "macros"
+]
+
 [package]
 name = "earth"
 version = "0.1.0"
@@ -8,3 +14,5 @@ edition = "2021"
 [dependencies]
 toml = "0.7.2"
 serde = { version = "1.0", features = ["derive"] }
+
+macros = { path = "macros" }
